--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 argparse
 requests
-smartsheet-python-sdk
-boxsdk
-gradio_client
 pathlib
+smartsheet-python-sdk==2.1.0
+boxsdk==2.2.0
+gradio_client==1.5.0
